# openglOne

./: CMakeLists.txt  glad.c  main.cpp
